--- a/wp-bib.bib
+++ b/wp-bib.bib
@@ -299,4 +299,63 @@ url={https://www.science.org/doi/10.1126/sciadv.abn3517#elettersSection}
  note = {osf.io/preprints/socarxiv/hbg3m}
 }
 
+@article{house2020universal,
+  title={Universal norm psychology leads to societal diversity in prosocial behaviour and development},
+  author={House, Bailey R and Kanngiesser, Patricia and Barrett, H Clark and Broesch, Tanya and Cebioglu, Senay and Crittenden, Alyssa N and Erut, Alejandro and Lew-Levy, Sheina and Sebastian-Enesco, Carla and Smith, Andrew Marcus and others},
+  journal={Nature Human Behaviour},
+  volume={4},
+  number={1},
+  pages={36--44},
+  year={2020},
+  publisher={Nature Publishing Group UK London}
+}
+
+@article{deffner2022causal,
+  title={A causal framework for cross-cultural generalizability},
+  author={Deffner, Dominik and Rohrer, Julia M and McElreath, Richard},
+  journal={Advances in Methods and Practices in Psychological Science},
+  volume={5},
+  number={3},
+  pages={25152459221106366},
+  year={2022},
+  publisher={SAGE Publications Sage CA: Los Angeles, CA}
+}
+
+@incollection{pearl2022external,
+  title={External validity: From do-calculus to transportability across populations},
+  author={Pearl, Judea and Bareinboim, Elias},
+  booktitle={Probabilistic and causal inference: The works of Judea Pearl},
+  pages={451--482},
+  year={2022}
+}
+
+@article{kennedy2021know,
+  title={Know your population and know your model: Using model-based regression and poststratification to generalize findings beyond the observed sample.},
+  author={Kennedy, Lauren and Gelman, Andrew},
+  journal={Psychological methods},
+  volume={26},
+  number={5},
+  pages={547},
+  year={2021},
+  publisher={American Psychological Association}
+}
+
+@article{burkner_modelling_2020,
+	title = {Modelling monotonic effects of ordinal predictors in {Bayesian} regression models},
+	volume = {73},
+	copyright = {© 2020 The British Psychological Society},
+	issn = {2044-8317},
+	url = {https://bpspsychub.onlinelibrary.wiley.com/doi/abs/10.1111/bmsp.12195},
+	doi = {https://doi.org/10.1111/bmsp.12195},
+	abstract = {Ordinal predictors are commonly used in regression models. They are often incorrectly treated as either nominal or metric, thus under- or overestimating the information contained. Such practices may lead to worse inference and predictions compared to methods which are specifically designed for this purpose. We propose a new method for modelling ordinal predictors that applies in situations in which it is reasonable to assume their effects to be monotonic. The parameterization of such monotonic effects is realized in terms of a scale parameter b representing the direction and size of the effect and a simplex parameter modelling the normalized differences between categories. This ensures that predictions increase or decrease monotonically, while changes between adjacent categories may vary across categories. This formulation generalizes to interaction terms as well as multilevel structures. Monotonic effects may be applied not only to ordinal predictors, but also to other discrete variables for which a monotonic relationship is plausible. In simulation studies we show that the model is well calibrated and, if there is monotonicity present, exhibits predictive performance similar to or even better than other approaches designed to handle ordinal predictors. Using Stan, we developed a Bayesian estimation method for monotonic effects which allows us to incorporate prior information and to check the assumption of monotonicity. We have implemented this method in the R package brms, so that fitting monotonic effects in a fully Bayesian framework is now straightforward.},
+	language = {en},
+	number = {3},
+	urldate = {2020-12-18},
+	journal = {British Journal of Mathematical and Statistical Psychology},
+	author = {Bürkner, Paul-Christian and Charpentier, Emmanuel},
+	year = {2020},
+	keywords = {Bayesian statistics, brms, isotonic regression, ordinal variables, R, Stan},
+	pages = {420--451},
+	file = {Snapshot:C\:\\Users\\au479924\\Zotero\\storage\\97PJ7P6W\\bmsp.html:text/html}
+}
 
